--- a/pair.html
+++ b/pair.html
@@ -1,245 +1,265 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>VISPER Pair section</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Pair Code</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <style>
-    * {
-      box-sizing: border-box;
-    }
-
     body {
-      margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(to right top, #f72585, #3a0ca3);
-      min-height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
-      padding: 20px;
+      height: 100vh;
+      margin: 0;
+      background: linear-gradient(135deg, #000000, #434343);
+      overflow: hidden;
+      font-family: Arial, sans-serif;
+    }
+
+    .matrix {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+      z-index: -1;
+      color: rgba(0, 255, 0, 0.5);
+      font-size: 20px;
+      font-family: monospace;
+    }
+
+    .matrix div {
+      position: absolute;
+      width: 20px;
+      height: 100%;
+      top: 0;
+      animation: matrix-fall linear infinite;
+    }
+
+    @keyframes matrix-fall {
+      0% {
+        top: -100%;
+      }
+      100% {
+        top: 100%;
+      }
     }
 
     .container {
-      background: rgba(255, 255, 255, 0.2);
-      backdrop-filter: blur(18px);
-      border-radius: 20px;
-      padding: 40px 30px;
-      max-width: 420px;
-      width: 100%;
-      color: #111827;
-      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      z-index: 1;
+    }
+
+    .box {
+      width: 300px;
+      height: 320px;
+      padding: 20px;
+      position: relative;
       text-align: center;
-      animation: fadeIn 0.7s ease;
+      background-color: rgb(0, 0, 0);
+      border-radius: 10px;
+      transform: perspective(1000px) rotateY(0deg);
+      box-shadow: 0 0 20px rgba(250, 249, 249, 0.7);
     }
 
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
+    #text {
+      color: #f6f5f5;
     }
 
-    h3 {
-      font-size: 1.8rem;
-      color: #ffffff;
-      margin-bottom: 10px;
+    .input-container input {
+      color: #f1eaea;
     }
 
-    p {
-      color: #e2e8f0;
-      font-size: 14px;
-      margin-bottom: 25px;
+    .centered-text {
+      color: #e9e4e4;
     }
 
     .input-container {
       display: flex;
-      background: white;
-      border-radius: 12px;
-      overflow: hidden;
-      box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+      background: rgb(10, 10, 10);
+      border-radius: 1rem;
+      background: black;
+      box-shadow: black;
+      padding: 0.3rem;
+      gap: 0.3rem;
+      max-width: 300px;
+      width: 100%;
     }
 
-    input {
-      flex: 1;
-      padding: 14px;
-      font-size: 16px;
+    .input-container input {
+      border-radius: 0.8rem 0 0 0.8rem;
+      background: #e8e8e8;
+      box-shadow: inset 13px 13px 10px #dcdcdc, inset -13px -13px 10px #f4f4f4;
+      width: 100%;
+      flex-basis: 75%;
+      padding: 1rem;
       border: none;
+      border-left: 2px solid #ecf2f8;
+      color: #000000;
+      transition: all 0.2s ease-in-out;
+    }
+
+    .input-container input:focus {
+      border-left: 2px solid #ecf1f6;
       outline: none;
-      color: #111827;
+      box-shadow: inset 13px 13px 10px #f0f2f3, inset -13px -13px 10px #f4f4f4;
     }
 
-    button {
-      background: linear-gradient(45deg, #f72585, #7209b7);
+    .input-container button {
+      flex-basis: 15%;
+      padding: 1rem;
+      background: #000000;
+      font-weight: 700;
+      letter-spacing: 0.3rem;
+      text-transform: uppercase;
       color: white;
-      padding: 0 20px;
-      font-weight: bold;
-      border: none;
-      cursor: pointer;
-      position: relative;
-      transition: all 0.3s ease;
+      border: 2px solid red;
+      width: 90%;
+      border-radius: 0 1rem 1rem 0;
+      transition: all 0.2s ease-in-out;
     }
 
-    button:hover {
-      background: linear-gradient(45deg, #f502d4, #3b82f6);
+    .input-container button:hover {
+      background-color: red;
+      border-color: green;
     }
 
-    button.loading::after {
-      content: "";
-      position: absolute;
-      top: 50%;
-      right: 12px;
-      width: 14px;
-      height: 14px;
-      border: 2px solid #fff;
-      border-top-color: transparent;
-      border-radius: 50%;
-      animation: spin 1s linear infinite;
-      transform: translateY(-50%);
-    }
-
-    button.loading {
-      opacity: 0.7;
-      pointer-events: none;
-    }
-
-    @keyframes spin {
-      to {
-        transform: translateY(-50%) rotate(360deg);
-      }
-    }
-
-    .response-area {
-      margin-top: 25px;
-    }
-
-    .code-box {
-      background: #f3f4f6;
-      border-radius: 10px;
-      padding: 15px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      font-size: 17px;
-      box-shadow: inset 2px 2px 6px #e5e7eb;
-      color: #111827;
-      margin-top: 10px;
-    }
-
-    .copy-btn {
-      background: #3b82f6;
-      color: white;
-      border: none;
-      padding: 6px 12px;
-      border-radius: 6px;
-      cursor: pointer;
-      font-size: 14px;
-    }
-
-    .copy-btn:hover {
-      background: #f502d4;
-    }
-
-    .error {
-      color: #ff4d4d;
-      font-weight: bold;
-      font-size: 14px;
-    }
-
-    @media (max-width: 480px) {
-      .container {
-        padding: 30px 20px;
-      }
-
-      h3 {
-        font-size: 1.5rem;
-      }
-
+    @media (max-width: 500px) {
       .input-container {
         flex-direction: column;
       }
 
-      input, button {
-        width: 100%;
-        border-radius: 0;
+      .input-container input {
+        border-radius: 0.8rem;
       }
 
-      button {
-        border-top: 1px solid #e5e7eb;
+      .input-container button {
+        padding: 0.4rem;
+        border-radius: 0.8rem;
+      }
+    }
+
+    .centered-text {
+      text-align: center;
+    }
+
+    @media (max-width: 500px) {
+      .box {
+        width: 90%; 
+      }
+    }
+
+    @media (max-width: 500px) {
+      .input-container input {
+        border-radius: 0.8rem;
+        width: 80%; 
       }
 
-      .code-box {
-        flex-direction: column;
-        gap: 10px;
-        text-align: center;
+      .input-container button {
+        padding: 1rem;
+        border-radius: 0.9rem;
+        width: 100%; 
       }
     }
   </style>
 </head>
 <body>
-
+  <div class="matrix"></div>
   <div class="container">
-    <h3>Visper MD</h3>
-    <p>Enter your WhatsApp number with country code</p>
-
-    <div class="input-container">
-      <input id="number" type="number" placeholder="94712345678" />
-      <button id="submit"><span id="submit-text">Submit</span></button>
+    <div class="main">
+      <div class="box" id="box">
+        <div id="text">
+          <i class="fa fa-user"></i>
+          <p>
+            <h3 class="centered-text">NADEEN-MD SESSION_ID</h3>
+            <br>
+            <h6>MADE BY NADEEN POORNA</h6>
+            <h6>⚙enter your phone number with country code⚙.</h6>
+            <div class="input-container">
+              <input placeholder="94711451319" type="number" id="number" placeholder="🔢Enter your Phone Number with Country Code" name="">
+              <button id="submit">Submit</button>
+            </div>
+            
+            <a id="waiting-message" class="centered-text" style="display: none;">🔄Please wait a while</a>
+            <br>
+            <br>
+            <main id="pair"></main>
+          </p>
+        </div>
+      </div>
     </div>
-
-    <div class="response-area" id="pair"></div>
   </div>
-
-  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.0.0-alpha.1/axios.min.js"></script>
   <script>
-    const submitBtn = document.getElementById("submit");
-    const input = document.getElementById("number");
-    const pair = document.getElementById("pair");
-    const submitText = document.getElementById("submit-text");
+    let a = document.getElementById("pair");
+    let b = document.getElementById("submit");
+    let c = document.getElementById("number");
 
-    async function copyToClipboard(text) {
-      await navigator.clipboard.writeText(text);
-      alert("Code copied: " + text);
+    async function Copy() {
+      let text = document.getElementById("copy").innerText;
+      let obj = document.getElementById("copy");
+      await navigator.clipboard.writeText(obj.innerText.replace('CODE: ', ''));
+      obj.innerText = "COPIED";
+      obj.style = "color:blue;font-weight:bold";
+      obj.size = "5";
+      setTimeout(() => {
+        obj.innerText = text;
+        obj.style = "color:white;font-weight:bold";
+        obj.size = "5";
+      }, 500);
     }
 
-    submitBtn.addEventListener("click", async (e) => {
+    b.addEventListener("click", async (e) => {
       e.preventDefault();
-      const number = input.value.trim().replace(/[^0-9]/g, "");
-
-      if (!number) {
-        pair.innerHTML = `<p class="error">Please enter your number.</p>`;
-        return;
+      if (!c.value) {
+        a.innerHTML = '<a style="color:white;font-weight:bold">❓Enter your WhatsApp number with Country Code</a><br><br>';
+      } else if (c.value.replace(/[^0-9]/g, "").length < 11) {
+        a.innerHTML = '<a style="color:red;font-weight:bold">Invalid Number</a><br><br>';
+      } else {
+        const Wasi_Tech = c.value.replace(/[^0-9]/g, "");
+        let bb = "";
+        let bbc = "";
+        const cc = Wasi_Tech.split('');
+        cc.map(a => {
+          bbc += a;
+          if (bbc.length == 3) {
+            bb += " " + a;
+          } else if (bbc.length == 8) {
+            bb += " " + a;
+          } else {
+            bb += a;
+          }
+        });
+        c.type = "text";
+        c.value = "+" + bb;
+        c.style = "color:black;font-size:20px";
+        a.innerHTML = '<a style="color:white;font-weight:bold">Please Wait...</a><br><br>';
+        let { data } = await axios(`/code?number=${Wasi_Tech}`);
+        let code = data.code || "Service Unavailable";
+        a.innerHTML = '<font id="copy" onclick="Copy()" style="color:red;font-weight:bold" size="5">CODE: <span style="color:white;font-weight:bold">' + code + '</span></font><br><br><br>';
       }
-
-      if (number.length < 11) {
-        pair.innerHTML = `<p class="error">Invalid number format.</p>`;
-        return;
-      }
-
-      submitBtn.classList.add("loading");
-      submitText.textContent = "Submitting...";
-      pair.innerHTML = `<p>Loading...</p>`;
-
-      try {
-        const res = await axios(`/code?number=${number}`);
-        const code = res.data.code || "Unavailable";
-
-        pair.innerHTML = `
-          <div class="code-box">
-            <span>CODE: ${code}</span>
-            <button class="copy-btn" onclick="copyToClipboard('${code}')">📋 Copy</button>
-          </div>
-        `;
-      } catch (err) {
-        pair.innerHTML = `<p class="error">Something went wrong. Try again later.</p>`;
-      }
-
-      submitBtn.classList.remove("loading");
-      submitText.textContent = "Submit";
     });
-  </script>
 
+    function createMatrix() {
+      const matrixContainer = document.querySelector('.matrix');
+      const columns = Math.floor(window.innerWidth / 20);
+      for (let i = 0; i < columns; i++) {
+        const column = document.createElement('div');
+        column.style.left = `${i * 20}px`;
+        column.style.animationDuration = `${Math.random() * 5 + 2}s`;
+        matrixContainer.appendChild(column);
+
+        for (let j = 0; j < 30; j++) {
+          const char = document.createElement('span');
+          char.innerText = String.fromCharCode(0x30A0 + Math.random() * 96);
+          column.appendChild(char);
+        }
+      }
+    }
+
+    createMatrix();
+  </script>
 </body>
 </html>
-
-
