--- a/pair.html
+++ b/pair.html
@@ -192,74 +192,79 @@
     </div>
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.0.0-alpha.1/axios.min.js"></script>
-  <script>
-    let a = document.getElementById("pair");
-    let b = document.getElementById("submit");
-    let c = document.getElementById("number");
+ <script>
+  let a = document.getElementById("pair");
+  let b = document.getElementById("submit");
+  let c = document.getElementById("number");
 
-    async function Copy() {
-      let text = document.getElementById("copy").innerText;
-      let obj = document.getElementById("copy");
-      await navigator.clipboard.writeText(obj.innerText.replace('CODE: ', ''));
-      obj.innerText = "COPIED";
-      obj.style = "color:blue;font-weight:bold";
+  async function Copy() {
+    let text = document.getElementById("copy").innerText;
+    let obj = document.getElementById("copy");
+    await navigator.clipboard.writeText("NADEENMD"); // always copy NADEENMD
+    obj.innerText = "COPIED";
+    obj.style = "color:blue;font-weight:bold";
+    obj.size = "5";
+    setTimeout(() => {
+      obj.innerText = text;
+      obj.style = "color:white;font-weight:bold";
       obj.size = "5";
-      setTimeout(() => {
-        obj.innerText = text;
-        obj.style = "color:white;font-weight:bold";
-        obj.size = "5";
-      }, 500);
-    }
+    }, 500);
+  }
 
-    b.addEventListener("click", async (e) => {
-      e.preventDefault();
-      if (!c.value) {
-        a.innerHTML = '<a style="color:white;font-weight:bold">❓Enter your WhatsApp number with Country Code</a><br><br>';
-      } else if (c.value.replace(/[^0-9]/g, "").length < 11) {
-        a.innerHTML = '<a style="color:red;font-weight:bold">Invalid Number</a><br><br>';
-      } else {
-        const Wasi_Tech = c.value.replace(/[^0-9]/g, "");
-        let bb = "";
-        let bbc = "";
-        const cc = Wasi_Tech.split('');
-        cc.map(a => {
-          bbc += a;
-          if (bbc.length == 3) {
-            bb += " " + a;
-          } else if (bbc.length == 8) {
-            bb += " " + a;
-          } else {
-            bb += a;
-          }
-        });
-        c.type = "text";
-        c.value = "+" + bb;
-        c.style = "color:black;font-size:20px";
-        a.innerHTML = '<a style="color:white;font-weight:bold">Please Wait...</a><br><br>';
-        let { data } = await axios(`/code?number=${Wasi_Tech}`);
-        let code = data.code || "Service Unavailable";
-        a.innerHTML = '<font id="copy" onclick="Copy()" style="color:red;font-weight:bold" size="5">CODE: <span style="color:white;font-weight:bold">' + code + '</span></font><br><br><br>';
-      }
-    });
-
-    function createMatrix() {
-      const matrixContainer = document.querySelector('.matrix');
-      const columns = Math.floor(window.innerWidth / 20);
-      for (let i = 0; i < columns; i++) {
-        const column = document.createElement('div');
-        column.style.left = `${i * 20}px`;
-        column.style.animationDuration = `${Math.random() * 5 + 2}s`;
-        matrixContainer.appendChild(column);
-
-        for (let j = 0; j < 30; j++) {
-          const char = document.createElement('span');
-          char.innerText = String.fromCharCode(0x30A0 + Math.random() * 96);
-          column.appendChild(char);
+  b.addEventListener("click", async (e) => {
+    e.preventDefault();
+    if (!c.value) {
+      a.innerHTML = '<a style="color:white;font-weight:bold">❓Enter your WhatsApp number with Country Code</a><br><br>';
+    } else if (c.value.replace(/[^0-9]/g, "").length < 11) {
+      a.innerHTML = '<a style="color:red;font-weight:bold">Invalid Number</a><br><br>';
+    } else {
+      const Wasi_Tech = c.value.replace(/[^0-9]/g, "");
+      let bb = "";
+      let bbc = "";
+      const cc = Wasi_Tech.split('');
+      cc.map(a => {
+        bbc += a;
+        if (bbc.length == 3) {
+          bb += " " + a;
+        } else if (bbc.length == 8) {
+          bb += " " + a;
+        } else {
+          bb += a;
         }
+      });
+      c.type = "text";
+      c.value = "+" + bb;
+      c.style = "color:black;font-size:20px";
+      a.innerHTML = '<a style="color:white;font-weight:bold">Please Wait...</a><br><br>';
+
+      // ↓↓↓ Fixed name section ↓↓↓
+      // even if server returns something else, we show only NADEENMD
+      let code = "NADEENMD";
+      a.innerHTML =
+        '<font id="copy" onclick="Copy()" style="color:red;font-weight:bold" size="5">CODE: <span style="color:white;font-weight:bold">' +
+        code +
+        '</span></font><br><br><br>';
+    }
+  });
+
+  function createMatrix() {
+    const matrixContainer = document.querySelector('.matrix');
+    const columns = Math.floor(window.innerWidth / 20);
+    for (let i = 0; i < columns; i++) {
+      const column = document.createElement('div');
+      column.style.left = `${i * 20}px`;
+      column.style.animationDuration = `${Math.random() * 5 + 2}s`;
+      matrixContainer.appendChild(column);
+
+      for (let j = 0; j < 30; j++) {
+        const char = document.createElement('span');
+        char.innerText = String.fromCharCode(0x30A0 + Math.random() * 96);
+        column.appendChild(char);
       }
     }
+  }
 
-    createMatrix();
-  </script>
+  createMatrix();
+</script>
 </body>
 </html>
